--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,7 @@ project(com_122)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab01-p01 "${PROJECT_SOURCE_DIR}/lab01/p01.cpp"
-)
+add_executable(lab01-p01 "${PROJECT_SOURCE_DIR}/lab01/p01.cpp")
 add_executable(lab01-p02 "${PROJECT_SOURCE_DIR}/lab01/p02.cpp")
 add_executable(lab01-p03 "${PROJECT_SOURCE_DIR}/lab01/p03.cpp")
 add_executable(lab01-p04 "${PROJECT_SOURCE_DIR}/lab01/p04.cpp")
@@ -14,7 +13,23 @@ add_executable(lab01-p07 "${PROJECT_SOURCE_DIR}/lab01/p07.cpp")
 add_executable(lab01-p08 "${PROJECT_SOURCE_DIR}/lab01/p08.cpp")
 add_executable(lab01-p09 "${PROJECT_SOURCE_DIR}/lab01/p09.cpp")
 add_executable(lab01-p10 "${PROJECT_SOURCE_DIR}/lab01/p10.cpp")
+
+add_executable(lab02-p01 "${PROJECT_SOURCE_DIR}/lab02/p01.cpp")
+add_executable(lab02-p02 "${PROJECT_SOURCE_DIR}/lab02/p02.cpp")
+add_executable(lab02-p03 "${PROJECT_SOURCE_DIR}/lab02/p03.cpp")
+add_executable(lab02-p04 "${PROJECT_SOURCE_DIR}/lab02/p04.cpp")
+add_executable(lab02-p05 "${PROJECT_SOURCE_DIR}/lab02/p05.cpp")
+add_executable(lab02-p06 "${PROJECT_SOURCE_DIR}/lab02/p06.cpp")
+add_executable(lab02-p07 "${PROJECT_SOURCE_DIR}/lab02/p07.cpp")
+add_executable(lab02-p08 "${PROJECT_SOURCE_DIR}/lab02/p08.cpp")
+add_executable(lab02-p09 "${PROJECT_SOURCE_DIR}/lab02/p09.cpp")
+add_executable(lab02-p10 "${PROJECT_SOURCE_DIR}/lab02/p10.cpp")
+
 add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
 add_executable(p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp")
 add_executable(p1002 "${PROJECT_SOURCE_DIR}/ojmid/p1002.cpp")
 add_executable(p1003 "${PROJECT_SOURCE_DIR}/ojmid/p1003.cpp")
+add_executable(p1004 "${PROJECT_SOURCE_DIR}/ojmid/p1004.cpp")
+add_executable(p1005 "${PROJECT_SOURCE_DIR}/ojmid/p1005.cpp")
+add_executable(p1006 "${PROJECT_SOURCE_DIR}/ojmid/p1006.cpp")
+add_executable(p1007 "${PROJECT_SOURCE_DIR}/ojmid/p1007.cpp")
