--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,18 @@ add_executable(lab02-p08 "${PROJECT_SOURCE_DIR}/lab02/p08.cpp")
 add_executable(lab02-p09 "${PROJECT_SOURCE_DIR}/lab02/p09.cpp")
 add_executable(lab02-p10 "${PROJECT_SOURCE_DIR}/lab02/p10.cpp")
 
+add_executable(lab03-p01 "${PROJECT_SOURCE_DIR}/lab03/p01.cpp")
+add_executable(lab03-p02 "${PROJECT_SOURCE_DIR}/lab03/p02.cpp")
+add_executable(lab03-p03 "${PROJECT_SOURCE_DIR}/lab03/p03.cpp")
+add_executable(lab03-p04 "${PROJECT_SOURCE_DIR}/lab03/p04.cpp")
+add_executable(lab03-p05 "${PROJECT_SOURCE_DIR}/lab03/p05.cpp")
+add_executable(lab03-p06 "${PROJECT_SOURCE_DIR}/lab03/p06.cpp")
+add_executable(lab03-p07 "${PROJECT_SOURCE_DIR}/lab03/p07.cpp")
+add_executable(lab03-p08 "${PROJECT_SOURCE_DIR}/lab03/p08.cpp")
+add_executable(lab03-p09 "${PROJECT_SOURCE_DIR}/lab03/p09.cpp")
+add_executable(lab03-p10 "${PROJECT_SOURCE_DIR}/lab03/p10.cpp")
+
+
 add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
 add_executable(p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp")
 add_executable(p1002 "${PROJECT_SOURCE_DIR}/ojmid/p1002.cpp")
@@ -33,3 +45,11 @@ add_executable(p1004 "${PROJECT_SOURCE_DIR}/ojmid/p1004.cpp")
 add_executable(p1005 "${PROJECT_SOURCE_DIR}/ojmid/p1005.cpp")
 add_executable(p1006 "${PROJECT_SOURCE_DIR}/ojmid/p1006.cpp")
 add_executable(p1007 "${PROJECT_SOURCE_DIR}/ojmid/p1007.cpp")
+add_executable(p1008 "${PROJECT_SOURCE_DIR}/ojmid/p1008.cpp")
+add_executable(p1009 "${PROJECT_SOURCE_DIR}/ojmid/p1009.cpp")
+add_executable(p1010 "${PROJECT_SOURCE_DIR}/ojmid/p1010.cpp")
+add_executable(p1011 "${PROJECT_SOURCE_DIR}/ojmid/p1011.cpp")
+add_executable(p1012 "${PROJECT_SOURCE_DIR}/ojmid/p1012.cpp")
+add_executable(p1013 "${PROJECT_SOURCE_DIR}/ojmid/p1013.cpp")
+add_executable(p1014 "${PROJECT_SOURCE_DIR}/ojmid/p1014.cpp")
+add_executable(p1015 "${PROJECT_SOURCE_DIR}/ojmid/p1015.cpp")
