--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,16 @@ add_executable(lab03-p08 "${PROJECT_SOURCE_DIR}/lab03/p08.cpp")
 add_executable(lab03-p09 "${PROJECT_SOURCE_DIR}/lab03/p09.cpp")
 add_executable(lab03-p10 "${PROJECT_SOURCE_DIR}/lab03/p10.cpp")
 
+add_executable(lab04-p01 "${PROJECT_SOURCE_DIR}/lab04/p01.cpp")
+add_executable(lab04-p02 "${PROJECT_SOURCE_DIR}/lab04/p02.cpp")
+add_executable(lab04-p03 "${PROJECT_SOURCE_DIR}/lab04/p03.cpp")
+add_executable(lab04-p04 "${PROJECT_SOURCE_DIR}/lab04/p04.cpp")
+add_executable(lab04-p05 "${PROJECT_SOURCE_DIR}/lab04/p05.cpp")
+add_executable(lab04-p06 "${PROJECT_SOURCE_DIR}/lab04/p06.cpp")
+add_executable(lab04-p07 "${PROJECT_SOURCE_DIR}/lab04/p07.cpp")
+add_executable(lab04-p08 "${PROJECT_SOURCE_DIR}/lab04/p08.cpp")
+add_executable(lab04-p09 "${PROJECT_SOURCE_DIR}/lab04/p09.cpp")
+add_executable(lab04-p10 "${PROJECT_SOURCE_DIR}/lab04/p10.cpp")
 
 add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
 add_executable(p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp")
@@ -53,3 +63,11 @@ add_executable(p1012 "${PROJECT_SOURCE_DIR}/ojmid/p1012.cpp")
 add_executable(p1013 "${PROJECT_SOURCE_DIR}/ojmid/p1013.cpp")
 add_executable(p1014 "${PROJECT_SOURCE_DIR}/ojmid/p1014.cpp")
 add_executable(p1015 "${PROJECT_SOURCE_DIR}/ojmid/p1015.cpp")
+add_executable(p1016 "${PROJECT_SOURCE_DIR}/ojmid/p1016.cpp")
+add_executable(p1017 "${PROJECT_SOURCE_DIR}/ojmid/p1017.cpp")
+add_executable(p1018 "${PROJECT_SOURCE_DIR}/ojmid/p1018.cpp")
+add_executable(p1019 "${PROJECT_SOURCE_DIR}/ojmid/p1019.cpp")
+add_executable(p1020 "${PROJECT_SOURCE_DIR}/ojmid/p1020.cpp")
+add_executable(p1021 "${PROJECT_SOURCE_DIR}/ojmid/p1021.cpp")
+add_executable(p1035 "${PROJECT_SOURCE_DIR}/ojmid/p1035.cpp")
+add_executable(p1036 "${PROJECT_SOURCE_DIR}/ojmid/p1036.cpp")
