--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.26)
 project(com_122)
 
 set(CMAKE_CXX_STANDARD 17)
-
+find_package(raylib CONFIG REQUIRED)
+#lab01
 add_executable(lab01-p01 "${PROJECT_SOURCE_DIR}/lab01/p01.cpp")
 add_executable(lab01-p02 "${PROJECT_SOURCE_DIR}/lab01/p02.cpp")
 add_executable(lab01-p03 "${PROJECT_SOURCE_DIR}/lab01/p03.cpp")
@@ -13,7 +14,7 @@ add_executable(lab01-p07 "${PROJECT_SOURCE_DIR}/lab01/p07.cpp")
 add_executable(lab01-p08 "${PROJECT_SOURCE_DIR}/lab01/p08.cpp")
 add_executable(lab01-p09 "${PROJECT_SOURCE_DIR}/lab01/p09.cpp")
 add_executable(lab01-p10 "${PROJECT_SOURCE_DIR}/lab01/p10.cpp")
-
+#lab02
 add_executable(lab02-p01 "${PROJECT_SOURCE_DIR}/lab02/p01.cpp")
 add_executable(lab02-p02 "${PROJECT_SOURCE_DIR}/lab02/p02.cpp")
 add_executable(lab02-p03 "${PROJECT_SOURCE_DIR}/lab02/p03.cpp")
@@ -24,7 +25,7 @@ add_executable(lab02-p07 "${PROJECT_SOURCE_DIR}/lab02/p07.cpp")
 add_executable(lab02-p08 "${PROJECT_SOURCE_DIR}/lab02/p08.cpp")
 add_executable(lab02-p09 "${PROJECT_SOURCE_DIR}/lab02/p09.cpp")
 add_executable(lab02-p10 "${PROJECT_SOURCE_DIR}/lab02/p10.cpp")
-
+#lab03
 add_executable(lab03-p01 "${PROJECT_SOURCE_DIR}/lab03/p01.cpp")
 add_executable(lab03-p02 "${PROJECT_SOURCE_DIR}/lab03/p02.cpp")
 add_executable(lab03-p03 "${PROJECT_SOURCE_DIR}/lab03/p03.cpp")
@@ -35,7 +36,7 @@ add_executable(lab03-p07 "${PROJECT_SOURCE_DIR}/lab03/p07.cpp")
 add_executable(lab03-p08 "${PROJECT_SOURCE_DIR}/lab03/p08.cpp")
 add_executable(lab03-p09 "${PROJECT_SOURCE_DIR}/lab03/p09.cpp")
 add_executable(lab03-p10 "${PROJECT_SOURCE_DIR}/lab03/p10.cpp")
-
+#lab04
 add_executable(lab04-p01 "${PROJECT_SOURCE_DIR}/lab04/p01.cpp")
 add_executable(lab04-p02 "${PROJECT_SOURCE_DIR}/lab04/p02.cpp")
 add_executable(lab04-p03 "${PROJECT_SOURCE_DIR}/lab04/p03.cpp")
@@ -46,13 +47,19 @@ add_executable(lab04-p07 "${PROJECT_SOURCE_DIR}/lab04/p07.cpp")
 add_executable(lab04-p08 "${PROJECT_SOURCE_DIR}/lab04/p08.cpp")
 add_executable(lab04-p09 "${PROJECT_SOURCE_DIR}/lab04/p09.cpp")
 add_executable(lab04-p10 "${PROJECT_SOURCE_DIR}/lab04/p10.cpp")
+#lab05
+# ... (previous code)
 
+#lab05
 add_executable(lab05-p01 "${PROJECT_SOURCE_DIR}/lab05/p01.cpp")
 add_executable(lab05-p02 "${PROJECT_SOURCE_DIR}/lab05/p02.cpp")
 add_executable(lab05-p03 "${PROJECT_SOURCE_DIR}/lab05/p03.cpp")
 add_executable(lab05-p04 "${PROJECT_SOURCE_DIR}/lab05/p04.cpp")
+target_link_libraries(lab05-p04 PRIVATE raylib)
 add_executable(lab05-p05 "${PROJECT_SOURCE_DIR}/lab05/p05.cpp")
+target_link_libraries(lab05-p05 PRIVATE raylib)
 
+#ojmid
 add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
 add_executable(p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp")
 add_executable(p1002 "${PROJECT_SOURCE_DIR}/ojmid/p1002.cpp")
@@ -77,3 +84,19 @@ add_executable(p1020 "${PROJECT_SOURCE_DIR}/ojmid/p1020.cpp")
 add_executable(p1021 "${PROJECT_SOURCE_DIR}/ojmid/p1021.cpp")
 add_executable(p1035 "${PROJECT_SOURCE_DIR}/ojmid/p1035.cpp")
 add_executable(p1036 "${PROJECT_SOURCE_DIR}/ojmid/p1036.cpp")
+add_executable(p1037 "${PROJECT_SOURCE_DIR}/ojmid/p1037.cpp")
+add_executable(p1038 "${PROJECT_SOURCE_DIR}/ojmid/p1038.cpp")
+add_executable(p1040 "${PROJECT_SOURCE_DIR}/ojmid/p1040.cpp")
+add_executable(p1041 "${PROJECT_SOURCE_DIR}/ojmid/p1041.cpp")
+add_executable(p1042 "${PROJECT_SOURCE_DIR}/ojmid/p1042.cpp")
+add_executable(p1043 "${PROJECT_SOURCE_DIR}/ojmid/p1043.cpp")
+add_executable(p1044 "${PROJECT_SOURCE_DIR}/ojmid/p1044.cpp")
+add_executable(p1045 "${PROJECT_SOURCE_DIR}/ojmid/p1045.cpp")
+add_executable(p1046 "${PROJECT_SOURCE_DIR}/ojmid/p1046.cpp")
+add_executable(p1047 "${PROJECT_SOURCE_DIR}/ojmid/p1047.cpp")
+add_executable(p1048 "${PROJECT_SOURCE_DIR}/ojmid/p1048.cpp")
+add_executable(p1049 "${PROJECT_SOURCE_DIR}/ojmid/p1049.cpp")
+add_executable(p1050 "${PROJECT_SOURCE_DIR}/ojmid/p1050.cpp")
+add_executable(p1051 "${PROJECT_SOURCE_DIR}/ojmid/p1051.cpp")
+add_executable(p1052 "${PROJECT_SOURCE_DIR}/ojmid/p1052.cpp")
+add_executable(p1061 "${PROJECT_SOURCE_DIR}/ojmid/p1061.cpp")
