--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,20 @@ target_link_libraries(lab05-p04 PRIVATE raylib)
 add_executable(lab05-p05 "${PROJECT_SOURCE_DIR}/lab05/p05.cpp")
 target_link_libraries(lab05-p05 PRIVATE raylib)
 
+#lab06
+add_executable(lab06-p01 "${PROJECT_SOURCE_DIR}/lab06/p01.cpp")
+add_executable(lab06-p02 "${PROJECT_SOURCE_DIR}/lab06/p02.cpp")
+add_executable(lab06-p03 "${PROJECT_SOURCE_DIR}/lab06/p03.cpp")
+target_link_libraries(lab06-p03 PRIVATE raylib)
+add_executable(lab06-p04 "${PROJECT_SOURCE_DIR}/lab06/p04.cpp")
+add_executable(lab06-p05 "${PROJECT_SOURCE_DIR}/lab06/p05.cpp")
+add_executable(lab06-p06 "${PROJECT_SOURCE_DIR}/lab06/p06.cpp")
+add_executable(lab06-p07 "${PROJECT_SOURCE_DIR}/lab06/p07.cpp")
+add_executable(lab06-p08 "${PROJECT_SOURCE_DIR}/lab06/p08.cpp")
+add_executable(lab06-p09 "${PROJECT_SOURCE_DIR}/lab06/p09.cpp")
+add_executable(lab06-p10 "${PROJECT_SOURCE_DIR}/lab06/p10.cpp")
+
+
 #ojmid
 add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
 add_executable(p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp")
@@ -100,3 +114,11 @@ add_executable(p1050 "${PROJECT_SOURCE_DIR}/ojmid/p1050.cpp")
 add_executable(p1051 "${PROJECT_SOURCE_DIR}/ojmid/p1051.cpp")
 add_executable(p1052 "${PROJECT_SOURCE_DIR}/ojmid/p1052.cpp")
 add_executable(p1061 "${PROJECT_SOURCE_DIR}/ojmid/p1061.cpp")
+add_executable(p1059 "${PROJECT_SOURCE_DIR}/ojmid/p1059.cpp")
+add_executable(p1060 "${PROJECT_SOURCE_DIR}/ojmid/p1060.cpp")
+add_executable(p1064 "${PROJECT_SOURCE_DIR}/ojmid/p1064.cpp")
+add_executable(p1065 "${PROJECT_SOURCE_DIR}/ojmid/p1065.cpp")
+add_executable(p1066 "${PROJECT_SOURCE_DIR}/ojmid/p1066.cpp")
+add_executable(p1067 "${PROJECT_SOURCE_DIR}/ojmid/p1067.cpp")
+add_executable(p1070 "${PROJECT_SOURCE_DIR}/ojmid/p1070.cpp")
+add_executable(p1071 "${PROJECT_SOURCE_DIR}/ojmid/p1071.cpp")
