--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,19 @@ add_executable(lab06-p08 "${PROJECT_SOURCE_DIR}/lab06/p08.cpp")
 add_executable(lab06-p09 "${PROJECT_SOURCE_DIR}/lab06/p09.cpp")
 add_executable(lab06-p10 "${PROJECT_SOURCE_DIR}/lab06/p10.cpp")
 
+#lab07
+add_executable(lab07-p01 "${PROJECT_SOURCE_DIR}/lab07/p01.cpp")
+add_executable(lab07-p02 "${PROJECT_SOURCE_DIR}/lab07/p02.cpp")
+add_executable(lab07-p03 "${PROJECT_SOURCE_DIR}/lab07/p03.cpp")
+add_executable(lab07-p04 "${PROJECT_SOURCE_DIR}/lab07/p04.cpp")
+add_executable(lab07-p05 "${PROJECT_SOURCE_DIR}/lab07/p05.cpp")
+target_link_libraries(lab07-p05 PRIVATE raylib)
+add_executable(lab07-p06 "${PROJECT_SOURCE_DIR}/lab07/p06.cpp")
+add_executable(lab07-p07 "${PROJECT_SOURCE_DIR}/lab07/p07.cpp")
+add_executable(lab07-p08 "${PROJECT_SOURCE_DIR}/lab07/p08.cpp")
+add_executable(lab07-p09 "${PROJECT_SOURCE_DIR}/lab07/p09.cpp")
+add_executable(lab07-p10 "${PROJECT_SOURCE_DIR}/lab07/p10.cpp")
+
 
 #ojmid
 add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
@@ -122,3 +135,11 @@ add_executable(p1066 "${PROJECT_SOURCE_DIR}/ojmid/p1066.cpp")
 add_executable(p1067 "${PROJECT_SOURCE_DIR}/ojmid/p1067.cpp")
 add_executable(p1070 "${PROJECT_SOURCE_DIR}/ojmid/p1070.cpp")
 add_executable(p1071 "${PROJECT_SOURCE_DIR}/ojmid/p1071.cpp")
+add_executable(p1072 "${PROJECT_SOURCE_DIR}/ojmid/p1072.cpp")
+add_executable(p1073 "${PROJECT_SOURCE_DIR}/ojmid/p1073.cpp")
+add_executable(p1074 "${PROJECT_SOURCE_DIR}/ojmid/p1074.cpp")
+add_executable(p1075 "${PROJECT_SOURCE_DIR}/ojmid/p1075.cpp")
+add_executable(p1076 "${PROJECT_SOURCE_DIR}/ojmid/p1076.cpp")
+add_executable(p1077 "${PROJECT_SOURCE_DIR}/ojmid/p1077.cpp")
+add_executable(p1078 "${PROJECT_SOURCE_DIR}/ojmid/p1078.cpp")
+add_executable(p1079 "${PROJECT_SOURCE_DIR}/ojmid/p1079.cpp")
